@@ -3,7 +3,6 @@ package com.moneyApp.bill;
 import com.moneyApp.account.AccountService;
 import com.moneyApp.bill.dto.*;
 import com.moneyApp.category.CategoryService;
-import com.moneyApp.category.dto.CategoryDTO;
 import com.moneyApp.payee.PayeeService;
 import com.moneyApp.utils.Utils;
 import com.moneyApp.vo.*;
@@ -13,26 +12,32 @@ import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static com.moneyApp.category.CategoryType.EXPENSE;
+
 @Service
 public class BillService
 {
+
+    private final BillRepository billRepo;
+    private final BillQueryRepository billQueryRepo;
     private final AccountService accountService;
     private final CategoryService categoryService;
     private final PayeeService payeeService;
-    private final BillRepository billRepo;
-    private final BillQueryRepository billQueryRepo;
 
-    BillService(final CategoryService categoryService
+
+    BillService(
+            final BillRepository billRepo
+            , final BillQueryRepository billQueryRepo
+            , final CategoryService categoryService
             , final PayeeService payeeService
-            , final AccountService accountService
-            , final BillRepository billRepo
-            , final BillQueryRepository billQueryRepo)
+            , final AccountService accountService)
     {
+        this.billRepo = billRepo;
+        this.billQueryRepo = billQueryRepo;
         this.accountService = accountService;
         this.categoryService = categoryService;
         this.payeeService = payeeService;
-        this.billRepo = billRepo;
-        this.billQueryRepo = billQueryRepo;
+
     }
 
     BillDTO createBillByUserId(BillDTO toSave, Long userId)
@@ -41,7 +46,7 @@ public class BillService
         var account = this.accountService.getAccountSourceByNameAndUserId(toSave.getAccountName(), userId);
 
 //        +1 so lowest number (for first bill in month) is 1
-        var number = getBillCountByMonthYearAndUserId(toSave.getDate(), userId) + 1;
+        var count = getBillCountByMonthYearAndUserId(toSave.getDate(), userId) + 1;
 
         var gainerNames = toSave.getPositions()
                             .stream()
@@ -52,8 +57,8 @@ public class BillService
 
         var bill = this.billRepo.save(new BillSnapshot(
                 null
-                , String.format("%s%s_%s", toSave.getDate().getYear(), toSave.getDate().getMonthValue(), number)
                 , toSave.getDate()
+                , String.valueOf(count)
                 , payee
                 , account
                 , null
@@ -71,11 +76,11 @@ public class BillService
                     .collect(Collectors.toSet())
                 , new UserSource(userId)));
 
-        var dto = toDto(bill);
+//TODO aktualizacja stanu konta w dopiero gdy jest ono wywoływane? bo tak ot tez update powinien wywoływać i aktualizować o róznicę jeśli odszło do zmian
+        var billSum = sumBillPositionsAmounts(bill);
+        this.accountService.updateAccountBalanceByAccountId(billSum, account.getId());
 
-        this.accountService.updateAccountBalanceByAccountId(dto.getBillSum(), account.getId());
-
-        return dto;
+        return toDto(bill);
     }
 
     BillDTO toDto(BillSnapshot snap)
@@ -107,9 +112,107 @@ public class BillService
                 .build();
     }
 
+//    TODO konkretna nazwa
+    BillDTO returnBillDTO(BillDTO toSave, Long userId)
+    {
+        var payee = this.payeeService.getPayeeSourceByNameAndUserId(toSave.getPayeeName(), userId);
+        var account = this.accountService.getAccountSourceByNameAndUserId(toSave.getAccountName(), userId);
+
+        var gainerNames = toSave.getPositions()
+                            .stream()
+                            .map(BillPositionDTO::getGainerName)
+                            .toList();
+
+        var gainers = this.payeeService.getPayeesByNamesAndUserIdAsDto(gainerNames, userId);
+
+        var toSaveDate = toSave.getDate();
+
+        long billId;
+        int count;
+        String billNumber;
+        BudgetSource budget;
+        var oldBillSum = 0d;
+
+        var monthYearMatches = false;
+
+        try
+        {
+            var bill = getBillByNumberAndUserId(toSave.getNumber(), userId);
+
+            billId = bill.getId();
+            billNumber = bill.getNumber();
+            budget = bill.getBudget();
+            var billDate = bill.getBillDate();
+
+            oldBillSum = sumBillPositionsAmounts(bill);
+
+            monthYearMatches = checkIfMonthYearMatch(billDate, toSaveDate);
+
+            if (!monthYearMatches)
+            {
+                //        +1 so lowest number (for first bill in month) is 1
+                count = getBillCountByMonthYearAndUserId(toSaveDate, userId) + 1;
+                billNumber = String.valueOf(count);
+                budget = null;
+            }
+        }
+        catch (IllegalArgumentException ex)
+        {
+            billId = 0L;
+            count = getBillCountByMonthYearAndUserId(toSaveDate, userId) + 1;
+            billNumber = String.valueOf(count);
+            budget = null;
+        }
+
+        var result = this.billRepo.save(new BillSnapshot(
+                billId
+                , toSaveDate
+                , billNumber
+                , payee
+                , account
+                , budget
+                , toSave.getDescription()
+                , toSave.getPositions()
+                    .stream()
+                    .map(dto ->
+                        {
+//                            null jest w przypadku gdy zmienia się data -> patrz flaga oraz nowoutworzonego
+                            BudgetPositionSource budgetPosition = null;
+                            if (monthYearMatches)
+                                budgetPosition = bill.getPositions().stream().toList().get(Math.toIntExact(dto.getId())).getBudgetPosition();
+
+                            return new BillPositionSnapshot(
+                                    dto.getId() == null ? 0L : dto.getId()
+                                    , dto.getNumber() == null ? toSave.getPositions().indexOf(dto) + 1 : dto.getNumber()
+                                    , dto.getAmount()
+                                    , new CategorySource(dto.getCategory().getId())
+//                                    TODO czy tu się też nie oprzeć o obiekt jak w przypadku category?
+                                    , new PayeeSource(gainers.stream().filter(p -> dto.getGainerName().equals(p.getName())).toList().get(0).getId())
+                                    , dto.getDescription()
+                                    , budgetPosition
+                            );
+                        })
+                .collect(Collectors.toSet())
+                , new UserSource(userId)
+        ));
+
+        var billSum = sumBillPositionsAmounts(result);
+        updateAccountBalanceByBillSum(billSum, oldBillSum, account.getId());
+
+        return toDto(result);
+    }
+
+    boolean checkIfMonthYearMatch(LocalDate billDate, LocalDate toSaveDate)
+    {
+        return billDate.getYear() == toSaveDate.getYear() && billDate.getMonthValue() == toSaveDate.getMonthValue();
+    }
+
+
     BillDTO updateBillByNumberAndUserAsDto(final BillDTO toUpdate, final Long userId)
     {
         var bill = getBillByNumberAndUserId(toUpdate.getNumber(), userId);
+
+        var oldBillSum = sumBillPositionsAmounts(bill);
 
         var gainerNames = toUpdate.getPositions()
                 .stream()
@@ -123,18 +226,21 @@ public class BillService
 
         if (bill.getBillDate().getYear() != toUpdate.getDate().getYear() || bill.getBillDate().getMonthValue() != toUpdate.getDate().getMonthValue())
         {
-            var number = getBillCountByMonthYearAndUserId(toUpdate.getDate(), userId) + 1;
+            var count = getBillCountByMonthYearAndUserId(toUpdate.getDate(), userId) + 1;
 
-            billNumber = String.format("%s%s_%s", toUpdate.getDate().getYear(), toUpdate.getDate().getMonthValue(), number);
+            billNumber = String.valueOf(count);
             budget = null;
         }
 
-        return toDto(this.billRepo.save(new BillSnapshot(
+        var payee = this.payeeService.getPayeeSourceByNameAndUserId(toUpdate.getPayeeName(), userId);
+        var account = this.accountService.getAccountSourceByNameAndUserId(toUpdate.getAccountName(), userId);
+
+        var result = this.billRepo.save(new BillSnapshot(
                 bill.getId()
-                , billNumber
                 , toUpdate.getDate()
-                , this.payeeService.getPayeeSourceByNameAndUserId(toUpdate.getPayeeName(), userId)
-                , this.accountService.getAccountSourceByNameAndUserId(toUpdate.getAccountName(), userId)
+                , billNumber
+                , payee
+                , account
                 , budget
                 , toUpdate.getDescription()
                 , toUpdate.getPositions()
@@ -157,7 +263,41 @@ public class BillService
                     })
                 .collect(Collectors.toSet())
                 , bill.getUser()
-        )));
+        ));
+
+        var billSum = sumBillPositionsAmounts(bill);
+
+        updateAccountBalanceByBillSum(billSum, oldBillSum, account.getId());
+
+        return toDto(result);
+    }
+
+    Double sumBillPositionsAmounts(BillSnapshot bill)
+    {
+        var sum = bill.getPositions()
+                .stream()
+                .mapToDouble(BillPositionSnapshot::getAmount)
+                .sum();
+
+        var type = this.categoryService.getCategoryTypeById(bill.getPositions()
+                                                                    .stream()
+                                                                    .toList()
+                                                                    .get(0).getCategory().getId());
+
+        if (EXPENSE.equals(type))
+            sum = -sum;
+
+        return sum;
+    }
+
+    void updateAccountBalanceByBillSum(double billSum, double oldBillSum, long accountId)
+    {
+        if (oldBillSum != billSum)
+        {
+            var sum = billSum - oldBillSum;
+
+            this.accountService.updateAccountBalanceByAccountId(sum, accountId);
+        }
     }
 
     void deleteBillByNumberAndUserId(final String number, final Long userId)
@@ -165,12 +305,17 @@ public class BillService
         this.billRepo.deleteByNumberAndUserId(number, userId);
     }
 
+    List<BillSnapshot> getBillSByUserId(Long userId)
+    {
+        return this.billQueryRepo.findByUserId(userId);
+    }
+
     List<BillDTO> getBillsByUserIdAsDto(Long userId)
     {
-        return this.billQueryRepo.findByUserId(userId)
+        return getBillSByUserId(userId)
                 .stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     Integer getBillCountByMonthYearAndUserId(final LocalDate date, final Long userId)
@@ -213,7 +358,7 @@ public class BillService
                 .build();
     }
 
-    public void updateBudgetPositionInBillPositionById(final Long budgetPositionId, final List<Long> billPositionIds)
+    public void updateBudgetPositionInBillPositionById(final Long budgetPositionId, final Set<Long> billPositionIds)
     {
         this.billRepo.updateBudgetPositionInBillPositionByIds(budgetPositionId, billPositionIds);
     }
@@ -226,22 +371,29 @@ public class BillService
                 .collect(Collectors.toSet());
     }
 
-    public List<BillPositionDTO> getBillPositionsWithoutBudgetPositionByMonthYearAndUserIdAsDto(final LocalDate monthYear, final Long userId)
+    List<BillPositionSnapshot> getBillPositionsWithoutBudgetPositionByMonthYearAndUserId(final LocalDate monthYear, final Long userId)
     {
         var startDate = Utils.getMonthYearStartDate(monthYear);
         var endDate = Utils.getMonthYearEndDate(monthYear);
 
         var bills = this.billQueryRepo.findByDatesAndUserId(startDate, endDate, userId);
-        var positions = new ArrayList<BillPositionDTO>();
+        var positions = new ArrayList<BillPositionSnapshot>();
 
         for (BillSnapshot b : bills)
             positions.addAll(b.getPositions()
                     .stream()
                     .filter(p -> p.getBudgetPosition() == null)
-                    .map(this::toDto)
                     .toList());
 
         return positions;
+    }
+
+    public List<BillPositionDTO> getBillPositionsWithoutBudgetPositionByMonthYearAndUserIdAsDto(final LocalDate monthYear, final Long userId)
+    {
+        return getBillPositionsWithoutBudgetPositionByMonthYearAndUserId(monthYear, userId)
+                .stream()
+                .map(this::toDto)
+                .toList();
     }
 
     public void updateBudgetInBillsByMonthYearAndUserId(final LocalDate monthYear, final long budgetId, final Long userId)
